added meta tag, changed class of bio-img

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
         <!-- <link rel="stylesheet" href="assets/css/normalize.css"> -->
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Me</title>
     </head>
     <body>
@@ -27,7 +28,7 @@
         <main>
             <h1 class="content-header">About Me</h1>
 
-            <img class="float-left" src="assets/images/profile_image.jpg" alt="Profile Image" width="200px" height="200px">
+            <img class="bio-img" src="assets/images/profile_image.jpg" alt="Profile Image" width="200px" height="200px">
             <p>
                 Exercitation do tempor cupidatat id qui duis qui mollit ea dolore minim aute magna. Tempor laborum proident magna ut. Est minim excepteur consectetur consectetur labore ipsum ut reprehenderit sit aliquip. Pariatur tempor ullamco anim ad est amet aliqua reprehenderit consequat pariatur duis. Et sit qui id non magna. Veniam fugiat sunt adipisicing laboris laboris nostrud eu ea cillum ea ea. Ipsum voluptate sint ea magna deserunt laborum.
             <br><br>
