--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
         <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
         <!-- <link rel="stylesheet" href="assets/css/normalize.css"> -->
         <link rel="stylesheet" href="assets/css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
     </head>
     <body>
@@ -32,7 +33,7 @@
                     <div class="bottom-center">Placeholder</div>
                 </a>
             </div>
-            <div class="container">
+            <div class="container float-right">
                 <a href="#">
                     <img src="assets/images/business-q-c-250-250-2.jpg" alt="placeholder1">
                     <div class="bottom-center">Placeholder2</div>
@@ -45,7 +46,7 @@
                     <div class="bottom-center">Placeholder3</div>
                 </a>
             </div>
-            <div class="container">
+            <div class="container float-right">
                 <a href="#">
                     <img src="assets/images/business-q-c-250-250-9.jpg" alt="placeholder1">
                     <div class="bottom-center">Placeholder4</div>
