--- a/portfolio.html
+++ b/portfolio.html
@@ -29,33 +29,33 @@
             <h1 class="content-header">Portfolio</h1>
             <div class="container">
                 <a href="#">
-                    <img src="assets/images/business-q-c-250-250-1.jpg" alt="placeholder1">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-1.jpg" alt="placeholder1">
                     <div class="bottom-center">Placeholder</div>
                 </a>
             </div>
             <div class="container float-right">
                 <a href="#">
-                    <img src="assets/images/business-q-c-250-250-2.jpg" alt="placeholder1">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-2.jpg" alt="placeholder1">
                     <div class="bottom-center">Placeholder2</div>
                 </a>
             </div>
             <br>
             <div class="container">
                 <a href="#">
-                    <img src="assets/images/business-q-c-250-250-4.jpg" alt="placeholder1">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-4.jpg" alt="placeholder1">
                     <div class="bottom-center">Placeholder3</div>
                 </a>
             </div>
             <div class="container float-right">
                 <a href="#">
-                    <img src="assets/images/business-q-c-250-250-9.jpg" alt="placeholder1">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-9.jpg" alt="placeholder1">
                     <div class="bottom-center">Placeholder4</div>
                 </a>
             </div>
             <br>
             <div class="container">
                 <a href="#">
-                    <img src="assets/images/business-q-c-250-250-10.jpg" alt="placeholder1">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-10.jpg" alt="placeholder1">
                     <div class="bottom-center">Placeholder5</div>
                 </a>
             </div>
