--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,9 @@
         <main>
             <h1 class="content-header">Portfolio</h1>
             <div class="container">
-                <a href="#">
+                <a href="https://jlato89.github.io/Word-Guess-Game/">
                     <img class="portfolio-img" src="assets/images/business-q-c-250-250-1.jpg" alt="placeholder1">
-                    <div class="bottom-center">Placeholder</div>
+                    <div class="bottom-center">Hangman Game</div>
                 </a>
             </div>
             <div class="container float-right">
