--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,9 @@
                 </a>
             </div>
             <div class="container float-right">
-                <a href="#">
+                <a href="https://jlato89.github.io/CrystalsCollector-Game/">
                     <img class="portfolio-img" src="assets/images/business-q-c-250-250-2.jpg" alt="placeholder1">
-                    <div class="bottom-center">Placeholder2</div>
+                    <div class="bottom-center">Crystals Collector Game</div>
                 </a>
             </div>
             <br>
