--- a/portfolio.html
+++ b/portfolio.html
@@ -29,21 +29,21 @@
             <h1 class="content-header">Portfolio</h1>
             <div class="container">
                 <a href="https://jlato89.github.io/Word-Guess-Game/">
-                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-1.jpg" alt="placeholder1">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-1.jpg" alt="hangman game">
                     <div class="bottom-center">Hangman Game</div>
                 </a>
             </div>
             <div class="container float-right">
                 <a href="https://jlato89.github.io/CrystalsCollector-Game/">
-                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-2.jpg" alt="placeholder1">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-2.jpg" alt="crystalscollector game">
                     <div class="bottom-center">Crystals Collector Game</div>
                 </a>
             </div>
             <br>
             <div class="container">
-                <a href="#">
-                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-4.jpg" alt="placeholder1">
-                    <div class="bottom-center">Placeholder3</div>
+                <a href="https://jlato89.github.io/TriviaGame">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-4.jpg" alt="trivia game">
+                    <div class="bottom-center">Trivia Game</div>
                 </a>
             </div>
             <div class="container float-right">
