--- a/portfolio.html
+++ b/portfolio.html
@@ -47,9 +47,9 @@
                 </a>
             </div>
             <div class="container float-right">
-                <a href="#">
-                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-9.jpg" alt="placeholder1">
-                    <div class="bottom-center">Placeholder4</div>
+                <a href="https://jlato89.github.io/GifTastic/">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-9.jpg" alt="GifTastic game">
+                    <div class="bottom-center">GifTastic</div>
                 </a>
             </div>
             <br>
