re-added Giftastic and RPS Multiplayer after merge conflict

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,16 +47,16 @@
                 </a>
             </div>
             <div class="container float-right">
-                <a href="#">
+                <a href="https://jlato89.github.io/GifTastic/">
                     <img class="portfolio-img" src="assets/images/business-q-c-250-250-9.jpg" alt="placeholder1">
-                    <div class="bottom-center">Placeholder4</div>
+                    <div class="bottom-center">GifTastic Game</div>
                 </a>
             </div>
             <br>
             <div class="container">
-                <a href="#">
+                <a href="https://jlato89.github.io/RPS-Multiplayer/">
                     <img class="portfolio-img" src="assets/images/business-q-c-250-250-10.jpg" alt="placeholder1">
-                    <div class="bottom-center">Placeholder5</div>
+                    <div class="bottom-center">RPS Multiplayer Game</div>
                 </a>
             </div>
         </main>
