--- a/portfolio.html
+++ b/portfolio.html
@@ -48,17 +48,23 @@
             </div>
             <div class="container float-right">
                 <a href="https://jlato89.github.io/GifTastic/">
-                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-9.jpg" alt="placeholder1">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-9.jpg" alt="gifTastic">
                     <div class="bottom-center">GifTastic Game</div>
                 </a>
             </div>
             <br>
             <div class="container">
                 <a href="https://jlato89.github.io/RPS-Multiplayer/">
-                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-10.jpg" alt="placeholder1">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-10.jpg" alt="RPS-Multiplayer">
                     <div class="bottom-center">RPS Multiplayer Game</div>
                 </a>
             </div>
+            <div class="container float-right">
+                <a href="https://jlato89.github.io/Whats-in-your-fridge/">
+                    <img class="portfolio-img" src="assets/images/business-q-c-250-250-9.jpg" alt="Project1">
+                    <div class="bottom-center">Project 1</div>
+                </a>
+            </div> 
         </main>
 
 <!--Footer Section-->
